--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ clipboard = "0.5.0"
 directories = "6.0.0"
 enigo = "0.3.0"
 font-kit = "0.14.2"
+peak_alloc = "0.2.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 toml = "0.8.20"
